--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     }
   ],
   "dependencies": {
-    "fs-extra": "0.26.2"
+    "fs-extra": "0.26.2",
+    "path": "^0.12.7",
+    "plist": "^1.2.0",
+    "xml2js": "^0.4.15"
   },
   "author": "Christian Cook",
   "license": "MIT",
