added ios platform support

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "cordova": {
     "id": "cordova-lifecycle-plugin",
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   },
   "repository": {
