--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-lifecycle-plugin",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "This plugin allows you to create an app lifecycle with alpha, beta and production states.",
   "cordova": {
     "id": "cordova-lifecycle-plugin",
@@ -23,7 +23,9 @@
     "production",
     "ecosystem:cordova",
     "cordova-android",
-    "android"
+    "cordova-ios",
+    "android",
+    "ios"
   ],
   "engines": [
     {
