--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "fs-extra": "0.26.2",
     "gm": "^1.21.1",
+    "lwip": "0.0.9",
     "path": "^0.12.7",
     "plist": "^1.2.0",
     "xml2js": "^0.4.15"
